css works better - xoverflow fixed - webgl context wont fail - still need to do click to full screen modal - and implement mouse and other unfiorms

--- a/max-portfolio/src/Components/CarouselComp.css
+++ b/max-portfolio/src/Components/CarouselComp.css
@@ -1,13 +1,14 @@
 .carousel-comp{
     margin: 12px;
     position: relative;
+    width: 480px;
+    height: 480px;
 }
 
 .carousel-comp--img{
-    /* max-width:100%;
-    max-height:100%; */
+    /* width:100%;
+    height:100%; */
     width: 480px;
-
 }
 
 .carousel-comp--text{
